# PIMC

./: .gitignore  BUILD.md  Beads.cpp  Beads.hpp  CMakeLists.txt  Energy.cpp  Energy.hpp  PoE.c  Potential.cpp  Potential.hpp  README.md  ab_initio.py  binding.cpp  geom.in  helpers.py  iat.py  input.in  main.py  main_h2.py  mcmc.cpp  mcmc.hpp  output.out  potential.py  projToINRC.py  propExcit.py  readGeom.py  readPot.py  requirements.txt  setup.py  stats.py  submit  testHO.py  test_script.py  tests.py
NN/: evaluate_NN.py  evaluate_NN2.py  model_architechture.py  test.py  train_NN.py
NN/data/: waterPES.com
NN/models/: model.pth  model1.pth  model2.pth  model3.pth  model4.pth  model5.pth  scalers.pkl
analysis/: analysis_CTrace.py  analysis_DTrace.py  analysis_tot_energy.py
helpers/: files.py  initialize.py  units.py
include/: Beads.hpp  Potential.hpp  analyticPotential.hpp
output/: 0.00095_EnergyTrace.csv  0.00095_KinEnergyTrace.csv  0.00095_PositionTrace.csv  0.00095_PotEnergyTrace.csv  0.00095_eStatTrace.csv  0.5_KinEnergyTrace.csv  0.5_KinThermoEnergyTrace.csv  0.5_PositionTrace.csv  0.5_PotEnergyTrace.csv  0.5_dBK.csv  0.5_eStatTrace.csv  1.0_KinEnergyTrace.csv  1.0_KinThermoEnergyTrace.csv  1.0_PositionTrace.csv  1.0_PotEnergyTrace.csv  1.0_dBK.csv  1.0_eStatTrace.csv  1.5_KinEnergyTrace.csv  1.5_KinThermoEnergyTrace.csv  1.5_PositionTrace.csv  1.5_PotEnergyTrace.csv  1.5_dBK.csv  1.5_eStatTrace.csv  2.0_KinEnergyTrace.csv  2.0_KinThermoEnergyTrace.csv  2.0_PositionTrace.csv  2.0_PotEnergyTrace.csv  2.0_dBK.csv  2.5_KinEnergyTrace.csv  2.5_KinThermoEnergyTrace.csv  2.5_PositionTrace.csv  2.5_PotEnergyTrace.csv  2.5_dBK.csv  3.0_KinEnergyTrace.csv  3.0_KinThermoEnergyTrace.csv  3.0_PositionTrace.csv  3.0_PotEnergyTrace.csv  3.0_dBK.csv  3.0_xiTrace.csv  3.5_KinEnergyTrace.csv  (+20 more)
sample_input/: input_H2.in  input_HO.in  input_HO_1D.in  input_HO_classical.in  input_HO_two_adiabats.in  input_HO_two_adiabats_PoE.in  input_c2.in  input_feh.in  input_non_adiab_0.in  input_non_adiab_1.in  input_non_adiab_2.in  potential_C2.py  potential_C2_1d.py  potential_FeH.py  potential_H2.py  potential_H2_1d.py  potential_HO.py  potential_HO_1D.py  potential_HO_two_adiabats.py  potential_non_adiab.py
src/: Beads.cpp  Energy.cpp  mcmc.cpp  nn_pot.cpp
tests/: tests.py
train_nn/: main.py  pip_nn.py  test_eval_nn.py
